# restapi-boilerplate

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  vcpkg.json
.github/workflows/: build-pipeline.yml  build.yml
include/: Core.hpp  core.hpp  export.hpp  test.hpp
include/Endpoint/: UserController.hpp
include/Service/: HttpServer.hpp  MongoDb.hpp
include/service/: MongoDbHandler.hpp
src/: main.cpp  test.cpp
src/Endpoint/: UserController.cpp
src/Service/: HttpServer.cpp  MongoDb.cpp
src/service/: MongoDbHandler.cpp
